--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,8 @@ author: cshzh
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "关于"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  关于我: "aboutme"
+  GitHub主: "https://github.com/cshzh"
 
 # --- Logo --- #
 
@@ -39,7 +36,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+#  email: "someone@example.com"
 #  facebook: deanattali
   github: "github.com/cshzh"
 #  twitter: daattali
